Added basic opensearch support.
Using firefox2 and IE7 it is now possible to add the trac search
engine to the browser ui search field.

http://www.opensearch.org/


git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4331 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,6 +16,10 @@
         <link rel="${rel}" py:for="link in links" py:attrs="link" />
       </py:for>
     </py:if>
+    <py:if test="'SEARCH_VIEW' in perm" id="search">
+      <link type="application/opensearchdescription+xml" rel="search" 
+            href="${href.search('opensearch')}" title="Search $project.name"/>
+    </py:if>
     <script py:for="script in chrome.scripts"
             type="${script.type}" src="${script.href}"></script>
     ${select("*[local-name() != 'title']")}
