* Fixes for the timeline RSS feed, including #4185.  * Slightly simplified the data structure passed from the timeline controller to the templates.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4334 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -32,10 +32,10 @@
        </div>
       </form>
 
-      <py:for each="day, events in groupby(events, key=lambda (day,ev): day)">
-        <h2>$day:</h2>
+      <py:for each="day, events in groupby(events, key=lambda e: format_date(e.date))">
+        <h2>${day}:</h2>
         <dl>
-          <py:for each="_, event in events">
+          <py:for each="event in events">
             <dt class="${event.kind}"><a href="${event.href}">
               <span class="time">${format_time(event.date, str('%H:%M'))}</span> ${event.title}
                 <py:if test="event.author">by ${event.author}</py:if>
