Fix milestone retarget drop-down menu. Thanks to akaihola for the report and the fix. Closes #4273
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4361 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/milestone_edit.html
+++ b/templates/milestone_edit.html
@@ -69,7 +69,7 @@
               <label>Retarget associated open tickets to milestone:
                 <select id="target" name="target">
                   <option value="">None</option>
-                  <option py:for="name in milestones">${name}</option>
+                  <option py:for="m in milestones">${m.name}</option>
                 </select>
               </label>
             </py:if>
