Changeset TracLinks now support arguments (#2168) and fragment identifier (#2078).
Also, the file entries in the changeset view have now an anchor.


git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4367 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/changeset.html
+++ b/templates/changeset.html
@@ -8,6 +8,11 @@
   <xi:include href="macros.html" />
   <head>
     <title>$title</title>
+    <script type="text/javascript">
+      $(document).ready(function() {
+        $("#content").find("li.entry h2").addAnchor("Link to this diff");
+      });
+    </script>
   </head>
 
   <body>
