Show number of matches for each group in reports. Closes #4302.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4386 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/report_view.html
+++ b/templates/report_view.html
@@ -30,7 +30,8 @@
   </div>
 
   <py:for each="value_for_group, row_group in row_groups">
-    <h2 py:if="value_for_group">$value_for_group</h2>
+    <h2 py:if="value_for_group">$value_for_group
+    <span class="numrows" py:with="cnt = len(row_group)">(${cnt or 'No'} match${cnt != 1 and 'es' or ''})</span></h2>
     <table class="listing ${report.id == -1 and 'reports' or 'tickets'}">
       <thead>
         <tr py:for="header_group in header_groups">
