Fix some breakage introduced by r4347: the ''version'' field and the ticket ''version'' conflicted, resulting in an incorrect preview. All the ticket fields arguments are now prefixed by ''field_''.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4387 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/ticket.css
+++ b/htdocs/css/ticket.css
@@ -2,7 +2,7 @@
 
 #content.ticket { width: 700px; max-width: 100% }
 
-#newticket #description { width: 100% }
+#newticket #field-description { width: 100% }
 #newticket #properties { width: 100% }
 
 #ticket {
