--- a/templates/ticket_new.html
+++ b/templates/ticket_new.html
@@ -21,17 +21,17 @@
 
       <form id="newticket" method="post" action="#preview">
         <div py:if="req.authname == 'anonymous'" class="field">
-          <label for="reporter">Your email or username:</label><br />
-          <input type="text" id="reporter" name="reporter" size="40" value="${ticket.reporter}" /><br />
+          <label for="field-reporter">Your email or username:</label><br />
+          <input type="text" id="field-reporter" name="field_reporter" size="40" value="${ticket.reporter}" /><br />
         </div>
         <div class="field">
-          <label for="summary">Short summary:</label><br />
-          <input id="summary" type="text" name="summary" size="80" value="${ticket.summary}"/>
+          <label for="field-summary">Short summary:</label><br />
+          <input id="field-summary" type="text" name="field_summary" size="80" value="${ticket.summary}"/>
         </div>
         <div class="field">
-          <label for="description">Full description (you may use <a tabindex="42"
+          <label for="field-description">Full description (you may use <a tabindex="42"
                  href="${href.wiki('WikiFormatting')}">WikiFormatting</a> here):</label><br />
-          <textarea id="description" name="description" class="wikitext" rows="10"
+          <textarea id="field-description" name="field_description" class="wikitext" rows="10"
                  cols="78">${ticket.description}</textarea>
           <fieldset py:if="ticket.description" id="preview">
             <legend>Description Preview</legend>
@@ -49,31 +49,31 @@
                 py:with="fullrow = len(row) == 1">
               <py:for each="idx, field in enumerate(row)">
                 <th class="col${idx + 1}" py:if="idx == 0 or not fullrow">
-                  <label for="${field.name}" py:if="field"
+                  <label for="field-${field.name}" py:if="field"
                          py:strip="field.type == 'radio'">${field.label or field.name}:</label>
                 </th>
                 <td class="col${idx + 1}" py:if="idx == 0 or not fullrow"
                     py:attrs="{'colspan': fullrow and 3 or None}">
                   <py:choose test="field.type" py:if="field">
-                    <select py:when="'select'" id="${field.name}" name="${field.name}">
+                    <select py:when="'select'" id="field-${field.name}" name="field_${field.name}">
                       <option py:if="field.optional"></option>
                       <option py:for="option in field.options"
                               selected="${ticket[field.name] == option or None}"
                               py:content="option"></option>
                     </select>
-                    <textarea py:when="'textarea'" id="${field.name}" name="${field.name}"
+                    <textarea py:when="'textarea'" id="field-${field.name}" name="field_${field.name}"
                               cols="${field.width}" rows="${field.height}"
                               py:content="ticket[field.name]"></textarea>
-                    <input py:when="'checkbox'" type="checkbox" id="${field.name}"
-                           name="${field.name}" value="${field.value}" />
+                    <input py:when="'checkbox'" type="checkbox" id="field-${field.name}"
+                           name="field_${field.name}" value="${field.value}" />
                     <label py:when="'radio'"
                            py:for="idx, option in enumerate(field.options)">
-                      <input type="radio" name="${field.name}" value="${option}"
+                      <input type="radio" name="field_${field.name}" value="${option}"
                              checked="${ticket[field.name] == option or None}" />
                       ${option}
                     </label>
-                    <input py:otherwise="" type="text" id="${field.name}"
-                           name="${field.name}" value="${ticket[field.name]}" />
+                    <input py:otherwise="" type="text" id="field-${field.name}"
+                           name="field_${field.name}" value="${ticket[field.name]}" />
                   </py:choose>
                 </td>
               </py:for>
