Fine tune the <h1> bottom margin, as suggested in #4113.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4390 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -7,7 +7,7 @@ h1, h2, h3, h4 {
  font-weight: bold;
  letter-spacing: -0.018em;
 }
-h1 { font-size: 19px; margin: .15em 1em 0 0 }
+h1 { font-size: 19px; margin: .15em 1em 0.5em 0 }
 h2 { font-size: 16px }
 h3 { font-size: 14px }
 hr { border: none;  border-top: 1px solid #ccb; margin: 2em 0 }
