Custom checkbox ticket fields with default-checked state should work now.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4398 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/ticket_new.html
+++ b/templates/ticket_new.html
@@ -64,8 +64,11 @@
                     <textarea py:when="'textarea'" id="field-${field.name}" name="field_${field.name}"
                               cols="${field.width}" rows="${field.height}"
                               py:content="ticket[field.name]"></textarea>
-                    <input py:when="'checkbox'" type="checkbox" id="field-${field.name}"
-                           name="field_${field.name}" value="${field.value}" />
+                    <span py:when="'checkbox'">
+                      <input type="checkbox" id="field-${field.name}" name="field_${field.name}"
+                             checked="${field.value == '1' and 'checked' or None}" value="1" />
+                      <input type="hidden" name="field_checkbox_${field.name}" value="1" />
+                    </span>
                     <label py:when="'radio'"
                            py:for="idx, option in enumerate(field.options)">
                       <input type="radio" name="field_${field.name}" value="${option}"
