Added [http://pygments.pocoo.org/ Pygments]-based syntax coloring, which provides more beautiful and flexible output than any other supported colorer for many languages, and is thus the new default. Closes #4246.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4399 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/code.css
+++ b/htdocs/css/code.css
@@ -50,26 +50,23 @@ table.code tbody th :link, table.code tbody th :visited {
 table.code tbody th :link:hover, table.code tbody th :visited:hover {
  color: #000;
 }
-table.code tbody td {
- background: #fff;
+table.code td {
  font: normal 11px monospace;
  overflow: hidden;
  padding: 1px 2px;
  vertical-align: top;
 }
-table.code tbody tr.hilite th {
+table.code tr.hilite th {
  background: #ccf;
 }
-table.code tbody tr.hilite td {
+table.code tr.hilite td {
  background: #ddf;
 }
 .image-file { background: #eee; padding: .3em }
 .image-file img { background: url(../imggrid.png) }
 
 /* Default */
-.code-block span {
- font-family: monospace;
-}
+.code-block span { font-family: monospace; }
 
 /* Comments */
 .code-comment, .css_comment, .c_comment, .c_commentdoc, .c_commentline,
