Two small fixes, follow-up to r4387:  - creating new tickets didn't set the status as `new` (#4335)  - wrong attribute `field_name` used instead of `name` (#4340)
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4400 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/ticket_new.html
+++ b/templates/ticket_new.html
@@ -42,7 +42,7 @@
         <fieldset id="properties" py:with="fields = [f for f in fields if not f.skip]">
           <legend>Ticket Properties</legend>
           <input type="hidden" name="action" value="create" />
-          <input type="hidden" name="status" value="new" />
+          <input type="hidden" name="field_status" value="new" />
 
           <table>
             <tr py:for="row in group(fields, 2, lambda f: f.type != 'textarea')"
