Add anchors to titles present in the ticket description
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4410 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/ticket_view.html
+++ b/templates/ticket_view.html
@@ -13,6 +13,7 @@
     <script type="text/javascript">
       $(document).ready(function() {
         $("#changelog h3.change").addAnchor("Link to this change");
+        $("div.description").find("h1,h2,h3,h4,h5,h6").addAnchor("Link to this section");
         $("#action input[@name='action']").click(function() {
           $("#resolve_choice").enable($("#resolve").checked());
           $("#reassign_choice").enable($("#reassign").checked());
