Final touch to the ''System Information'' refactoring:  - the `env.systeminfo` is now an array instead of a hash; instead of an arbitrary order of the keys (or the meaningless alphabetical ordering), the entries are listed according to the sequence in which they were added.  - because of the above, care must be taken to store the version information only once  - on the About ''System Information'' page, adopted the same style as on the error page, for displaying the systeminfo table.  - ... and added version info for Trac itself
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4420 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/about.css
+++ b/htdocs/css/about.css
@@ -22,3 +22,6 @@
   background: #f9f9f0;
 }
 #content.about_config td.doc { padding: 3px 1em 3px 1em; }
+
+#content.about_systeminfo #systeminfo { margin: 1em; width: auto; }
+#content.about_systeminfo #systeminfo th { font-weight: bold; text-align: right; }
