Fix for editing custom fields of type ''text''. Thanks to Maximilian Bernhardt for the report and the fix (related to #3939).
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4455 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/ticket_view.html
+++ b/templates/ticket_view.html
@@ -248,7 +248,7 @@ ${comment}</textarea></p>
                       ${option}
                     </label>
                     <input py:otherwise="" type="text" id="field-${field.name}"
-                      name="${field.name}" value="${ticket[field.name]}" />
+                      name="field_${field.name}" value="${ticket[field.name]}" />
                   </py:choose>
                 </td>
               </py:for>
