In TracQuery, fix the initial value and the tests for radio buttons used for boolean fields. Fixes #3771.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4462 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/query.html
+++ b/templates/query.html
@@ -85,10 +85,10 @@
 
                         <py:when test="'checkbox'">
                           <input type="radio" id="${field_name}_on" name="$field_name" value="1"
-                                 checked="${constraint.mode != '!' or None}" />
+                                 checked="${constraint.mode != '!' or constraint_value == '1' or None}" />
                           <label for="${field_name}_on">yes</label>
                           <input type="radio" id="${field_name}_off" name="$field_name" value="0"
-                                 checked="${constraint.mode == '!' or None}" />
+                                 checked="${constraint.mode == '!' or constraint_value != '1' or None}" />
                           <label for="${field_name}_off">no</label>
                         </py:when>
 
