--- a/templates/query.html
+++ b/templates/query.html
@@ -158,23 +158,21 @@
 
       <script type="text/javascript">
         var properties={
-        <py:for each="idx, (field_name, field) in enumerate(fields.items())">
+        <py:for each="sep, (field_name, field) in separated(fields.iteritems())">
           $field_name: { type: "$field.type", label: "$field.label"
           <py:if test="field.options">, options: [
-            <py:for each="idx, option in enumerate(field.options)">"$option"<py:if
-                test="idx &lt; len(field.options)-1">,</py:if>
+            <py:for each="sep, option in separated(field.options)">"$option"$sep
             </py:for>]
-          </py:if>}<py:if test="idx &lt; len(fields)-1">,</py:if>
+          </py:if>}$sep
         </py:for>
         };
         var modes = {
-        <py:for each="idx, (type_name, type_modes) in enumerate(modes.items())">
+        <py:for each="sep, (type_name, type_modes) in separated(modes.iteritems())">
           $type_name: [
-          <py:for each="idx, mode in enumerate(type_modes)">
-            {text: "$mode.name", value: "$mode.value" }<py:if
-              test="idx &lt; len(type_modes)-1">,</py:if>
+          <py:for each="sep, mode in separated(type_modes)">
+            {text: "$mode.name", value: "$mode.value" }$sep
           </py:for>
-            ]<py:if test="idx &lt; len(modes)-1">,</py:if>
+            ]$sep
         </py:for>
         };
         initializeFilters();
